# bid3-manuals-scraper

./: .env.template  .gitignore  Copilot-Processing.md  README.md  cli.py  convert_mhtml_to_html.py  debug_page.html  main.py  manual_urls.json  pyproject.toml  requirements.txt  scraper.py  scraper_fixed.py  user-manual_inputs.mhtml
.github/prompts/: GPT-5 optimized scraper.prompt.md  Scrape.prompt.md  Scrape_mhtml.prompt.md
data/: manual_urls.json
src/: __init__.py  scraper.py
tests/: test_linkchecker.py  test_utils.py
